--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,29 +1,34 @@
-version: '3'
+version: '3.3'
 
 volumes:
   data:
 
 services:
   mysql:
-    container_name: urlshortener-mysql
     image: mysql
     ports:
       - "3306:3306"
     volumes:
-      - .docker/data/db:/var/lib/mysq
+      - data:/var/lib/mysql
     environment:
-      - MYSQL_USER=url_user
-      - MYSQL_PASSWORD=password
       - MYSQL_DATABASE=db_url_shortener
       - MYSQL_ROOT_PASSWORD=rootpassword
 
   app:
-    container_name: urlshortener-app
     build:
       context: .
       dockerfile: Dockerfile
-    image: urlshortener-api:latest
-    expose:
-      - 8080
+    image: urlshortener-app:latest
+    ports:
+      - "8080:8080"
     depends_on:
       - mysql
+
+  # myadmin:
+  #   image: phpmyadmin/phpmyadmin:latest
+  #   links:
+  #     - mysql
+  #   ports:
+  #     - 80:80
+  #   environment:
+  #     - PMA_ARBITRARY=1      
