--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-server.port=8081
+server.port=8080
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
 
 # DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/db_url_shortener2?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3306/db_url_shortener?createDatabaseIfNotExist=true&useTimezone=true
 spring.datasource.username=root
 spring.datasource.password=rootpassword
 
 # Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 
-url-shortener.host-redirect=http://localhost:8081/api/v1/short-urls
+url-shortener.host-redirect=http://localhost:8080/api/v1/short-urls
