--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,13 @@ server.port=8080
 spring.jpa.hibernate.ddl-auto=update
 
 # DataSource
-spring.datasource.url=jdbc:mysql://mysql:3306/db_url_shortener?createDatabaseIfNotExist=true&useTimezone=true
-spring.datasource.username=root
-spring.datasource.password=rootpassword
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 # Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 
-url-shortener.host-redirect=http://localhost:8080/api/v1/short-urls
+url-shortener.host-redirect=
